# aeron

./: .gitignore  CMakeLists.txt  RUN_CLUSTER_TESTS.md  build.gradle
.github/workflows/: cpp-cluster-tests.yml
aeron-archive/src/main/c/: CMakeLists.txt
aeron-archive/src/main/cpp_wrapper/: CMakeLists.txt
aeron-archive/src/test/c/: CMakeLists.txt
aeron-archive/src/test/cpp_wrapper/: CMakeLists.txt
aeron-client/src/main/c/: CMakeLists.txt  aeron_windows.c
aeron-client/src/main/c/concurrent/: aeron_executor.c
aeron-client/src/main/c/util/: aeron_bitutil.c  aeron_env.c  aeron_strutil.c
aeron-client/src/main/cpp_wrapper/: AeronCounters.h  CMakeLists.txt  ExclusivePublication.h  Publication.h
aeron-client/src/main/cpp_wrapper/concurrent/: AgentTerminationException.h  AtomicCounter.h  BackOffIdleStrategy.h  BusySpinIdleStrategy.h  CountedErrorHandler.h  CountersReader.h  EpochClock.h  IdleStrategy.h  UnsafeBuffer.h
aeron-client/src/main/cpp_wrapper/concurrent/errors/: DistinctErrorLog.h
aeron-client/src/main/cpp_wrapper/util/: CloseHelper.h  DirectBuffer.h  ExpandableArrayBuffer.h  SemanticVersion.h
aeron-client/src/test/c/: CMakeLists.txt  aeron_image_test.cpp
aeron-client/src/test/c/concurrent/: aeron_mpsc_rb_test.cpp  aeron_spsc_rb_test.cpp
aeron-client/src/test/c/util/: aeron_error_test.cpp
aeron-client/src/test/cpp_wrapper/: CMakeLists.txt  EmbeddedMediaDriver.h
aeron-cluster/: CPP_PORT_PLAN.md  TEST_MIGRATION_PLAN.md
aeron-cluster/src/main/cpp_wrapper/: CMakeLists.txt
aeron-cluster/src/main/cpp_wrapper/cluster/: AllowBackupAndStandbyAuthorisationService.h  AppVersionValidator.h  ClusterBackupEventsListener.h  ClusterClientSession.h  ClusterControl.h  ClusterControlAdapter.h  ClusterMember.h  ClusterMembership.h  ClusterSession.h  ClusterSessionProxy.h  ClusterTermination.h  ConsensusAdapter.h  ConsensusControlState.h  ConsensusModule.cpp  ConsensusModule.h  ConsensusModuleAdapter.h  ConsensusModuleAgent.cpp  ConsensusModuleAgent.h  ConsensusModuleControl.h  ConsensusModuleExtension.h  ConsensusModuleSnapshotAdapter.h  ConsensusModuleSnapshotListener.h  ConsensusModuleSnapshotPrinter.h  ConsensusModuleSnapshotTaker.h  ConsensusModuleStateExport.h  ConsensusPublisher.h  EgressPublisher.h  Election.cpp  Election.h  ElectionState.h  IngressAdapter.h  LogAdapter.cpp  LogAdapter.h  LogPublisher.h  LogReplay.h  LogSourceValidator.h  MillisecondClusterClock.h  MultipleRecordingReplication.h  NanosecondClusterClock.h  NodeControl.h  (+19 more)
aeron-cluster/src/main/cpp_wrapper/cluster/client/: AeronCluster.h  ClusterEvent.h  ClusterExceptions.h  ControlledEgressAdapter.h  ControlledEgressListener.h  ControlledEgressListenerExtension.h  CredentialsSupplier.h  EgressAdapter.h  EgressListener.h  EgressListenerExtension.h  EgressPoller.h  IngressSessionDecorator.h
aeron-cluster/src/main/cpp_wrapper/cluster/security/: Authenticator.h  AuthorisationService.h
aeron-cluster/src/main/cpp_wrapper/cluster/service/: ActiveLogEvent.h  BoundedLogAdapter.h  ClientSession.h  Cluster.h  ClusterClock.h  ClusterCounters.h  ClusterMarkFile.h  ClusterNodeControlProperties.h  ClusterTerminationException.h  ClusteredService.h  ConsensusModuleProxy.h  ContainerClientSession.h  RecoveryState.h  ServiceAdapter.h  ServiceSnapshotLoader.h  ServiceSnapshotTaker.h  SnapshotDurationTracker.h  SnapshotTaker.h
aeron-cluster/src/test/cpp_wrapper/: AeronClusterAsyncConnectTest.cpp  AeronClusterContextTest.cpp  AeronClusterTest.cpp  CMakeLists.txt  EgressAdapterTest.cpp  EgressPollerTest.cpp  RecordingLogTest.cpp
aeron-driver/src/main/c/: CMakeLists.txt  aeron_driver_conductor.c  aeron_duty_cycle_tracker.h
aeron-driver/src/test/c/: CMakeLists.txt
